compiler/src/test/resources/amyc/parser/failing/WrongQName1.amy
module Foo.bar
end Foo.bar
